--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,6 +37,7 @@ repos:
           '--max-line-length=120',
           '--exclude=venv,migrations',
           '--max-complexity=8',
+          '--ignore=CCE001',
         ]
         additional_dependencies: [
           'flake8-annotations-complexity',
