--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,53 +1,31 @@
 repos:
   - repo: local
     hooks:
-      - id: autoflake
-        name: autoflake
-        entry: autoflake
+      - id: ruff
+        name: ruff
+        entry: ruff format
         language: python
         types: [ python ]
         pass_filenames: true
-        args: [
-          '--in-place',
-          '--remove-all-unused-imports',
-          '--remove-unused-variables',
-          '--remove-duplicate-keys',
-        ]
+        args: []
 
-      - id: black
-        name: black
-        entry: black
+      - id: isort
+        name: isort
+        entry: isort
         language: python
         types: [ python ]
         pass_filenames: true
         args: [
+          '--profile=black',
           '--line-length=120',
-          '--exclude=venv,migrations',
-          '--target-version=py311',
-          '--skip-string-normalization',
+          '--multi-line=3',
+          '--trailing-comma',
         ]
 
-      - id: flake8
-        name: flake8
-        entry: flake8
+      - id: mypy
+        name: mypy
+        entry: mypy
         language: python
-        types: [python]
-        pass_filenames: true
-        args: [
-          '--max-line-length=120',
-          '--exclude=venv,migrations',
-          '--max-complexity=8',
-          '--ignore=CCE001',
-        ]
-        additional_dependencies: [
-          'flake8-annotations-complexity',
-          'flake8-django',
-          'flake8-builtins',
-          'flake8-class-attributes-order',
-          'flake8-comprehensions',
-          'flake8-eradicate',
-          'flake8-fixme',
-          'flake8-import-order',
-        ]
-
+        types: [ python ]
+        args: ['--ignore-missing-imports']
 
